[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Enemies/ShieldBot/static idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/ShieldBot/shield finished.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/ShieldBot/hit and death.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/ShieldBot/shield prep.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/ShieldBot/shield puulse.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/ShieldBot/shock attack.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/Enemies/ShieldBot/attack.tres" type="Animation" id=7]
[ext_resource path="res://Assets/Animations/Enemies/ShieldBot/ShieldFinished.tres" type="Animation" id=8]
[ext_resource path="res://Assets/Animations/Enemies/ShieldBot/ShieldReady.tres" type="Animation" id=9]
[ext_resource path="res://Assets/Animations/Enemies/ShieldBot/ShieldUp.tres" type="Animation" id=10]
[ext_resource path="res://Scenes/ShieldBot.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.33333, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.3333, 4.66667 )

[sub_resource type="Animation" id=3]
resource_name = "HitAndDie"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteHolder/HitAndDie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 9 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 149.333, 85.3333 )

[node name="ShieldBot" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 0
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.666667, -9 )
shape = SubResource( 1 )

[node name="SpriteHolder" type="Node2D" parent="."]
scale = Vector2( 1.5, 1.5 )

[node name="Idle" type="Sprite" parent="SpriteHolder"]
position = Vector2( 0, -15.6667 )
texture = ExtResource( 1 )

[node name="Attack" type="Sprite" parent="SpriteHolder"]
visible = false
position = Vector2( 0, -15.3333 )
texture = ExtResource( 6 )
vframes = 14
frame = 13

[node name="Area2D" type="Area2D" parent="SpriteHolder/Attack"]
collision_layer = 65536
collision_mask = 65536

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteHolder/Attack/Area2D"]
position = Vector2( 0.333335, 10.6667 )
shape = SubResource( 2 )
disabled = true

[node name="ShieldReady" type="Sprite" parent="SpriteHolder"]
visible = false
position = Vector2( 0, -15.3333 )
texture = ExtResource( 4 )
vframes = 10

[node name="ShieldUp" type="Sprite" parent="SpriteHolder"]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 5 )
vframes = 6

[node name="ShieldFinished" type="Sprite" parent="SpriteHolder"]
visible = false
position = Vector2( 0, -15.3333 )
texture = ExtResource( 2 )
vframes = 4

[node name="HitAndDie" type="Sprite" parent="SpriteHolder"]
visible = false
position = Vector2( 0, -15.3333 )
texture = ExtResource( 3 )
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitAndDie = SubResource( 3 )
anims/ShieldFinished = ExtResource( 8 )
anims/ShieldReady = ExtResource( 9 )
anims/ShieldUp = ExtResource( 10 )
anims/attack = ExtResource( 7 )

[node name="damageArea" type="Area2D" parent="."]
collision_layer = 65536
collision_mask = 65536

[node name="CollisionShape2D" type="CollisionShape2D" parent="damageArea"]
position = Vector2( -0.666667, -9.33333 )
shape = SubResource( 4 )

[node name="AlertRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertRange"]
position = Vector2( -0.000175476, -42.6667 )
shape = SubResource( 5 )

[connection signal="body_entered" from="AlertRange" to="." method="_on_AlertRange_body_entered"]
